<resources>
    <string name="app_name">SongChimp</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="let_the_music_speak">Let the Music Speak!</string>
    <string name="discover_music">Discover Music</string>
    <string name="new_albums">New Albums</string>
    <string name="popular">Popular</string>
    <string name="all">All</string>
    <string name="playlist">Playlist</string>
    <string name="time_defaut">00:00</string>
</resources>