<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ebony">

    <tech.sonle.songchimp.ui.views.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:appBarTitle="@string/app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20sdp">

            <TextView
                android:id="@+id/tvTitleDisMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/discover_music"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/layoutDisMusic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_180sdp"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDisMusic" />

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:dotsColor="@color/dove_gray"
                app:dotsSize="@dimen/_6sdp"
                app:dotsSpacing="@dimen/_2sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutDisMusic"
                app:selectedDotColor="@color/radical_red" />

            <TextView
                android:id="@+id/tvTitlePlaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/playlist"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/indicator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:drawablePadding="@dimen/_8sdp"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="@id/tvTitlePlaylist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitlePlaylist" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvPlaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/tvTitlePlaylist" />

            <TextView
                android:id="@+id/tvTitlePopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/popular"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvPlaylist" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:drawablePadding="@dimen/_8sdp"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="@id/tvTitlePopular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitlePopular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/tvTitlePopular" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>